<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TaskPageActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/toolbar_task_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="20dp"
                android:inputType="text"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/delete_task_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_delete"
                android:gravity="left" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".NewsPageActivity">


        <ImageView
            android:id="@+id/taskpage_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher" />

        <androidx.cardview.widget.CardView
            android:id="@+id/taskInfoCardView"
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:layout_below="@+id/taskpage_image"
            android:layout_margin="10dp"
            android:elevation="20dp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="3dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:text="@string/task_number"
                            android:textColor="@android:color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/taskpage_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="#7"
                            android:textSize="16sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="end"
                    android:layout_weight="2"
                    android:background="#F9F9F9"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="20dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="20dp">

                    <TextView
                        android:id="@+id/taskpage_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:paddingBottom="10dp"
                        android:text="@string/task_name"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/taskpage_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/task_description"
                        android:textColor="@android:color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/taskpage_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="11:07" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:src="@drawable/ic_clock" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/taskpage_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="2018-12-12" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:src="@drawable/ic_date" />

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <include android:layout_below="@+id/taskInfoCardView"
            android:layout_height="500dp"
            android:layout_width="match_parent"
            layout="@layout/activity_maps"/>


    </RelativeLayout>
</ScrollView>

</LinearLayout>